[tool.poetry]
name = "generate-python-document"
version = "0.1.0"
description = ""
authors = ["taki-21 <taki.it.0208.21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
